--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -540,7 +540,7 @@ body {
   }
   //   Block5
   &-block5 {
-    background-image: url(../img/block5/block5-bg.png);
+    background-image: url(../img/block5/block5-bg.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 70px;
